# tpcf

./: README  README.md  combine.py  divide.py  fast_plot.py  legendre.py  makeDD.py  makeDR.py  makeRR.py  power_spec.py  preprocess.py  requirements.txt  tpcf_fast.cfg
cmake/Modules/: FindLHAPDF.cmake  FindURAnalysis.cmake  Findcfitsio.cmake  Findqfits.cmake
correlation_fast/: CMakeLists.txt  Makefile  correlation_fast.cc  hist_fast.h  step2.cc  tab_integral.cc
lib/: bins.py  catalog.py  correlation.py  cosmology.py  helper.py  myio.py
old_python/: README  limit.py  plot_time.py  root_io.py  root_to_fits.py  time.py
old_python/post_cosmology/: combine.py  plot.py
python/: README  README.md  combine.py  combine_cosmo.py  config.cfg  cosmology.py  divide.py  divide_cosmo.py  fast_plot.py  hist_fast.py  limit.py  preprocess.py  preprocess_cosmo.py  preprocessed.py  sample_conf.cfg  sample_config.cfg  test_cosmology_plot.py  test_hist_fast.py  test_hist_plot.py
python/cosmo/: README  batch_combine.sh  batch_config.cfg  combine.py  correlation_function.py  divide.py  limit.py  plot.py  sample_config.cfg
python/doc/: config.cfg
python/kdtree/: RR.ipynb  config.cfg  correlation_function.py  dr.npz
python/lib/: bins.py  catalog.py  correlation.py  cosmology.py  general.py  helper.py  special.py
python/no_cosmo/: README  brute_combine.py  brute_divide.py  changelog  combine.py  correlation_function.py  cosmology.py  divide.py  sample_config.cfg
python/post_cosmology/: combine.py  correlation_function.py
python/test/: test_config.cfg  (+2 more)
test/: test_special.py
(+80 files in other folders)
